--- a/CustomRichEditControl/RichEditControl.xaml
+++ b/CustomRichEditControl/RichEditControl.xaml
@@ -85,7 +85,14 @@
                 <Image Source="Images/InsertTable_16x16.png" Width="16" Height="16" />
             </ToggleButton>
         </ToolBar>
-        <RichTextBox Name="rtbEditor" AcceptsTab="True" SelectionChanged="rtbEditor_SelectionChanged" HorizontalAlignment="Right"/>
+        <RichTextBox Name="rtbEditor" AcceptsTab="True" SelectionChanged="rtbEditor_SelectionChanged" HorizontalAlignment="Right">
+            <FlowDocument>
+                <Paragraph>
+                    <Run Text="{Binding Text }"/>
+                </Paragraph>
+            </FlowDocument>
+        </RichTextBox>
+                 
         
         
     </DockPanel>
