--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -7,12 +7,12 @@
         xmlns:customcontrol="clr-namespace:CustomRichEditControl;assembly=CustomRichEditControl"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Window.Resources>
+    <!--<Window.Resources>
         <local:TestConverter x:Key="TestConv" />
-    </Window.Resources>
+    </Window.Resources>-->
     <Grid>
 
-        <customcontrol:UserControl1 VerticalAlignment="Top" Height="300" Text="{Binding TestText,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,Converter={StaticResource TestConv } }"/>
+        <customcontrol:UserControl1 VerticalAlignment="Top" Height="300" Text="{Binding TestText, RelativeSource={RelativeSource AncestorType=Window},UpdateSourceTrigger=PropertyChanged,Mode=TwoWay }"/>
         <Button Content="Save" Click="BtnSave_Click" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
