--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns:local="clr-namespace:TestApp"
         xmlns:customcontrol="clr-namespace:CustomRichEditControl;assembly=CustomRichEditControl"
         mc:Ignorable="d"
@@ -14,7 +15,12 @@
 
         <customcontrol:UserControl1 VerticalAlignment="Top" Height="300" 
                                     Text="{Binding TestText, RelativeSource={RelativeSource AncestorType=Window},UpdateSourceTrigger=PropertyChanged,Mode=TwoWay }"
-                                    RtfText="{Binding RtfTestText, RelativeSource={RelativeSource AncestorType=Window},UpdateSourceTrigger=PropertyChanged,Mode=TwoWay }"/>
+                                    RtfText="{Binding RtfTestText, RelativeSource={RelativeSource AncestorType=Window},UpdateSourceTrigger=PropertyChanged,Mode=TwoWay }" Margin="0,4,0,0">
+            <dxmvvm:Interaction.Behaviors>
+                <dxmvvm:FocusBehavior/>
+            </dxmvvm:Interaction.Behaviors>
+            
+        </customcontrol:UserControl1>
         <Button Content="Save" Click="BtnSave_Click" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
